--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>LaboFront</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com" defer></script>
+  
+  
 </head>
 <body>
   <app-root></app-root>
